--- a/Strings/Readme.me
+++ b/Strings/Readme.me
@@ -1,13 +1,13 @@
-1. Concatenation
-2. Substring (Brute Force Done, KMP Algorithm remaining)
-3. Replace String (Not done)
-4. Finding the length of String
-5. Trim a string
-6. Reverse a String
-7. Rotation of String
-8. Subsequence of String (Not Done)	
-9. Binary String (Not done)
-10. Palindrome String
-11. Lexigoraphic Patterns
+Concatenation
+Substring (Brute Force Done, KMP Algorithm remaining)
+Replace String (Not done)
+Finding the length of String
+Trim a string
+Reverse a String
+Rotation of String
+Subsequence of String (Not Done)	
+Binary String (Not done)
+Palindrome String
+Lexigoraphic Patterns
 
 
